# c3pm_test_polinomial

./: CMakeLists.txt  README.md  c3pm.json
src/: unittest_main.cpp
src/exports/: polinomial.cpp  polinomial.h
